--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 Naming is odd, so that it is not easy to locate the link.
+Web Tech general homework links here:
+http://kellyscho.github.org/schoeyz12.html
 
+------ ARCHIVE ------
+Notes: removed the schofie.org domain from my github
 Web Tech general homework links here:
 http://kelly.schofie.org/schoeyz12.html
 
